--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.2",
-    "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.12.2",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
